# WEB_HW9

hw9/: .gitignore  config.ini  connection.py  data_delete.py  data_upload.py  main.py  models.py  pyproject.toml
