[tool.poetry]
name = "hw9"
version = "0.1.0"
description = ""
authors = ["olga-ivanko <o.ivanko@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
mongo = "^0.2.0"
pymongo = {extras = ["srv", "tls"], version = "^4.6.1"}
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
